fix z-index of collapsable nav menu

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,4 +1,8 @@
 
+.site-header{
+    z-index: 999;
+}
+
 .site-header h1, nav ul li:not(.active){
     cursor: pointer;
 }
